OK-611 Käynnistetään hakukohteiden laskenta kannasta